tests/errors/error_display/test_hll_immutable_borrow_display.err.expected
error: at 4:26: [HMC-BorrowImmutableAsMut] In function 'f': cannot borrow immutable binding 'x' as mutable
   |
 4 |             let r = &mut x;
   |                          ^
